xilinx-zynqmp: update README.hardware and README
Issue: LINCD-5292

This commit contains the modifications as below:
1) move the descriptions for GPU/SATA/PCIe/HDF/USB-OTG from README.hardware
to README.
2) fix some pattern typos.
3) update URLs for xilinx wiki from 2019.01 to 2019.02.
4) move all board features description under "Features" section.

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/README
+++ b/README
@@ -85,8 +85,8 @@ prior to booting the kernel Image. The DTB file can be found in the export
 directory after building a project, or you can generate it manually with the
 following commands:
 
-        # bitbake -c devshell virtual/kernel
-        # vim arch/arm64/boot/dts/xilinx/the_file_you_edit*.dts
+	# bitbake -c devshell virtual/kernel
+	# vim arch/arm64/boot/dts/xilinx/the_file_you_edit*.dts
 	# make xilinx/zynqmp-zcu102-rev1.0.dtb
 
 The resulting DTB file can be found here:
@@ -137,79 +137,7 @@ Run the following command to load the kernel image and DTB image:
 	=> setenv bootargs console=ttyPS0,115200 earlycon=cdns,mmio,0xFF000000 clk_ignore_unused root=/dev/nfs rw nfsroot=serverip:path_root_rootfs ip=dhcp
 	=> tftpboot 0x10000000 Image; tftpboot 0x11800000 dtb; booti 0x10000000 - 0x11800000
 
-5. Features
-===========
-
-5.1 CAN
--------
-
-# configure can0 in the speed of 800000
-   $ ip link set can0 up type can bitrate 800000
-   $ ip -details link show can0
-
-# send out a single frame
-   $ cansend can0 1F334455#1122334455667788
-   $ ip link set can0 down
-
-5.2 DP monitor operations
--------------------------
-
-5.2.1 Show and adjust screen resolution, some draw examples
-   root@xilinx-zynqmp:~# export DISPLAY=:0.0
-   root@xilinx-zynqmp:~# xrandr
-   Screen 0: minimum 320 x 200, current 1024 x 768, maximum 4096 x 4096
-   DP-1 connected primary 1024x768+0+0 518mm x 324mm
-      1920x1080     24.00    23.98
-      1280x720      60.00    50.00    59.94
-      1024x768      75.03*   60.00
-      800x600       75.00    60.32
-      720x576       50.00
-      720x480       60.00    59.94
-      640x480       75.00    60.00    59.94
-      720x400       70.08
-   root@xilinx-zynqmp:~# xrandr -s 1920x1080
-
-5.2.2 Audio Play
---------------
-Connect loudspeaker or headset with display monitor, and then run below commands:
- # aplay -l
- # speaker-test -c2 -twav
-
-5.3. suspend/resume
--------------------
-
-"Suspend-To-RAM" is supportted by running below command:
-
-	# echo mem > /sys/power/state
-
-Wakeup system, customer can use network, rtc, console and so on, it depends on concrete scenario.
-Below is an example of wakeing up by console.
-Run below command before entering suspend status.
-	# echo enabled > /sys/devices/platform/amba/ff000000.serial/tty/ttyPS0/power/wakeup
-And then, press Enter key in console window.
-
-6. kexec and kdump
-===================
-
-You need to add feature/kexec support as follow:
-
-	./wrlinux-x/setup.sh --machines xilinx-zynqmp --templates feature/kexec,feature/kdump
-
-6.1 kexec
----------
-
-	kexec -l  /boot/Image --append="`cat /proc/cmdline`"
-	kexec -e
-
-6.2 kdump
----------
-
-Add crashkernel=512M to the kernel cmdline
-   kexec -p /boot/Image --append="$your-bootcmd"
-   echo c > /proc/sysrq-trigger
-
-
-7. WIC Notes
+5. WIC Notes
 ============
 
 User can use the OpenEmbedded Image Creator to create the properly partitioned
@@ -219,8 +147,9 @@ information about WIC:
 
 https://docs.yoctoproject.org/singleindex.html#creating-partitioned-images-using-wic
 
-7.1 Build the WIC image within BOOT.BIN in boot partition
--------------------------------------------------------
+5.1 Build WIC image within BOOT.BIN in boot partition
+-----------------------------------------------------
+
 BOOT.BIN is the bootloader for zcu102 board. Because of license issue, it isn't
 integrated into WRLinux. You can download it from the website:
 
@@ -238,7 +167,7 @@ deploy folder as follows:
 There are two partitions in this WIC images, the first one is to hold the boot
 images(including kernel/dtb/BOOT.BIN), the second is the related root file system.
 
-7.2 Boot the board from the WIC SD card
+5.2 Boot the board from the WIC SD card
 ---------------------------------------
 
 Insert the SD card into the board and power on, then set the proper u-boot
@@ -255,23 +184,225 @@ Board can boot automatically by set the below uboot environment variables:
 
 => saveenv; run bootcmd;
 
-8 FPGA Bitstream File Update
-=============================
+6. Multilib
+===========
+
+By default, this BSP is configured as a 64-bit kernel and 64-bit userspace.
+If a full 32-bit filesystem is necessary, use the prefix "lib32-" before
+the expected target image as follows:
+
+	# bitbake lib32-wrlinux-image-std
+
+7. kexec and kdump
+===================
+
+You need to add feature/kexec support as follow:
+	./wrlinux-x/setup.sh --machines xilinx-zynqmp --templates feature/kexec,feature/kdump
+
+7.1 kexec
+---------
+
+	kexec -l  /boot/Image --append="`cat /proc/cmdline`"
+	kexec -e
+
+7.2 kdump
+---------
+
+Add crashkernel=512M to the kernel cmdline
+   kexec -p /boot/Image --append="$your-bootcmd"
+   echo c > /proc/sysrq-trigger
+
+8. Features
+===========
+
+8.1 CAN
+-------
+
+# configure can0 in the speed of 800000
+   $ ip link set can0 up type can bitrate 800000
+   $ ip -details link show can0
+
+# send out a single frame
+   $ cansend can0 1F334455#1122334455667788
+   $ ip link set can0 down
+
+8.2 DisplayPort
+---------------
+
+According to the vendor, only some monitors in the following link are supported:
+  https://www.xilinx.com/support/answers/68671.html
+
+8.2.1 DP Display
+----------------
+
+Show and adjust screen resolution, some draw examples
+   root@xilinx-zynqmp:~# export DISPLAY=:0.0
+   root@xilinx-zynqmp:~# xrandr
+   Screen 0: minimum 320 x 200, current 1024 x 768, maximum 4096 x 4096
+   DP-1 connected primary 1024x768+0+0 518mm x 324mm
+      1920x1080     24.00    23.98
+      1280x720      60.00    50.00    59.94
+      1024x768      75.03*   60.00
+      800x600       75.00    60.32
+      720x576       50.00
+      720x480       60.00    59.94
+      640x480       75.00    60.00    59.94
+      720x400       70.08
+   root@xilinx-zynqmp:~# xrandr -s 1920x1080
+
+8.2.2 DP Audio
+--------------
+
+Connect loudspeaker or headset with display monitor, and then run below commands:
+	# aplay -l
+	# speaker-test -c2 -twav
+
+8.3 suspend/resume
+------------------
+
+"Suspend-To-RAM" is supportted by running below command:
+
+	# echo mem > /sys/power/state
+
+Wakeup system, customer can use network, rtc, console and so on, it depends on concrete scenario.
+Below is an example of wakeing up by console.
+Run below command before entering suspend status.
+	# echo enabled > /sys/devices/platform/amba/ff000000.serial/tty/ttyPS0/power/wakeup
+And then, press Enter key in console window.
+
+8.4 System Monitor
+------------------
+
+System monitor includes PL monitor and PS monitor.
+Each system monitor measures voltage and temperature to provide information and alarms
+to other parts of the system including the PMU, RPU, and APU processors.
+
+Customer could check the detail system monitor interfaces with below command:
+	# ls -la /sys/bus/iio/devices/iio:device0
+
+8.5 CANFD
+---------
+
+Based on CANFD FPGA LogiCORE IP from Xilinx, there are 2 canfd devices on FPGA side.
+An example is provided to verify can/canfd driver with Xilinx-zcu102 board(REV 1.0) and
+FMC extend board(https://www.xilinx.com/products/boards-and-kits/1-12nths4.html)
+
+8.5.1 Boot up system with CANFD specific dtb file
+------------------------------------------------
+
+	# fatload mmc 0 0x13000000 zynqmp-zcu102-rev1.0-canfd.dtb
+	or
+	# tftpboot 0x13000000 <tftp server>/zynqmp-zcu102-rev1.0-canfd.dtb
+
+8.5.2 Verify CANFD
+------------------
+
+	Detail verification commands as below:
+
+	# ip link set can1 up type can bitrate 125000 dbitrate 8000000 fd on
+	# ip link set can2 up type can bitrate 125000 dbitrate 8000000 fd on
+	# candump can1 &
+	# cansend can2 5A1#11.22.33.44.55.66.77.88
+	# ip -d -s link show can1
+	# ip -d -s link show can2
+
+If can1 dump data from can2, CANFD feature works fine.
+
+There is a Xilinx Wiki link as below, it is a CANFD development guide.
+It may offer some help when customer develops CANFD feature on their own platform.
+https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18842496/Linux+CAN+driver
+
+If customer wants to implement their own or more canfd devices, please connect with
+Xilinx to get professional technical support about how to design CANFD on FPGA side.
+
+8.6 USB OTG
+-----------
+
+USB OTG mode can only work at USB2.0 speed for host & device, and file this question to
+the vendor, the following link is their answer:
+  https://forums.xilinx.com/t5/Embedded-Development-Tools/OTG-in-ZCU102-with-Rev-1-0-doesn-t-work-on-the-latest-SDK-v2017/td-p/837647
+
+8.7 PCIe
+--------
+
+Only some limited PCIe devices were supported based on the SDK2018.02 and the
+following link:
+
+  http://www.wiki.xilinx.com/ZynqMP+Linux+PCIe+Root+Port
+
+As mentioned in this website, NVMe SSD and TIGON3 have been validated. It is not
+recommended to use other PCIe devices(Not mentioned in this website) because it
+might bring the board with a little electrical instability on ZCU102 Rev 1.0.
+
+8.8 GPU
+-------
+
+3D-graphics apps call Mali-libs API(libmali-xlnx) to drive the Mali400 GPU
+directly by Mali400 kernel driver.
+Some of mesa-demos test cases can be used to validate this function under limitation,
+but we just keep this part as-is without further debugging since only binary
+libs are available.
+
+Due to the software license terms, we are not permitted to redistribute the
+libmali-xlnx components. Due to this, we are unable to support the components
+or directly enable them within Wind River Linux. Please contact your silicon
+vendor if you have any questions about the libmali-xlnx software license terms.
+
+As below is the step how to build a graphics enabled system:
+
+  1) set BB_NO_NETWORK as '0' in <path-of-project>/build/conf/local.conf file.
+
+  2) Launch bitbake to build an image with graphics support
+
+     $ cd path_to_your_project
+     $ . ./environment-setup-x86_64-wrlinuxsdk-linux
+     $ . ./oe-init-build-env
+     $ cat << _EOF >> conf/local.conf
+DISTRO ?= "wrlinux-graphics"
+PREFERRED_PROVIDER_virtual/mesa_xilinx-zynqmp = "mesa-gl"
+PREFERRED_PROVIDER_virtual/libgl_xilinx-zynqmp = "mesa-gl"
+PREFERRED_PROVIDER_virtual/libgles1_xilinx-zynqmp = "libmali-xlnx"
+PREFERRED_PROVIDER_virtual/libgles2_xilinx-zynqmp = "libmali-xlnx"
+PREFERRED_PROVIDER_virtual/egl_xilinx-zynqmp = "libmali-xlnx"
+PNWHITELIST_xilinx += "libmali-xlnx"
+PNWHITELIST_xilinx += 'kernel-module-mali'
+LICENSE_FLAGS_WHITELIST += "xilinx"
+_EOF
+     $ bitbake wrlinux-image-std-sato
+
+8.9 SATA
+---------
+
+When your SATA hard disk data is corrupted, the system might report a hard link
+reset, then try the following command:
+
+     $ echo "- - -" > /sys/class/scsi_host/host1/scan
+       ata2: hard resetting link
+       ata2: SATA link down (SStatus 0 SControl 330)
+       ata2: EH complete
+
+And mkfs a new filesystem on your hard disk partition.
+
+9 FPGA Bitstream File Update
+============================
+
 On xilinx-zynqmp platform, customer is able to update their own FPGA design image
 from linux side in running time. A simple example as below:
 
-8.1. Prepare FPGA bitstream file
+9.1 Prepare FPGA bitstream file
 ---------------------------------
-Download a xilinx prebuilt bitstream file with below link:
-https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/135364615/Zynq+2019.1+Release
-Then, extract the .bit file from package 2019.1-zcu102-release.tar.xz and rename it into system.bit
 
-8.2. Generate binary file
+Download a xilinx prebuilt bitstream file with below link:
+https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/183304302/2019.2+Release
+Then, extract the .bit file from package 2019.2-zcu102-release.tar.xz and rename it into system.bit
+
+9.2 Generate binary file
 --------------------------
+
 Because xilinx-zynqmp platform only supports binary format for updating FPGA, it is need
 to change the .bit file into binary format with below commands:
  - set environment variable
- # source xxx/Vivado/Vivado/2019.1/settings64.sh
+ # source xxx/Vivado/Vivado/2019.2/settings64.sh
 
  - generate the .bin from .bit file using Bootgen
  # bootgen -image Bitstream.bif -arch zynqmp -process_bitstream bin	(For 2017.4 and earlier releases)
@@ -286,9 +417,9 @@ to change the .bit file into binary format with below commands:
 
  - The output bin file is system.bit.bin
 
-8.3. Generate Device Tree Overlay (DTO)
+9.3 Generate Device Tree Overlay (DTO)
 ---------------------------------------
-8.3.1 Create a dtsi file pl.dtsi
+
 As below is the file contents example:
 
 // pl.dtsi overlay dts file.
@@ -310,19 +441,18 @@ As below is the file contents example:
     };
 };
 
-8.3.2 Create Device Tree Overlay Blob
 We can create Device Tree Overlay Blob (.dtbo) file from
 the pl.dtsi file as below:
 
 dtc -O dtb -o pl.dtbo -b 0 -@ pl.dtsi
 
-8.4. Deploy required files
---------------------------
+9.4 Deploy required files
+---------------------------
 Deploy system.bit.bin and pl.dtbo file in SD card or other storage medium.
 
-8.5. Update FPGA bitstream file
+9.5 Update FPGA bitstream file
 --------------------------------
-8.5.1 Update FPGA by using device tree overlay
+9.5.1 Update FPGA by using device tree overlay
 Boot up kernel and login, then run below commands in terminal.
 1) Set flags for Full Bitstream.
 	# echo 0 > /sys/class/fpga_manager/fpga0/flags
@@ -340,7 +470,7 @@ Boot up kernel and login, then run below commands in terminal.
 4) Steps to remove device nodes
 	# rmdir /sys/kernel/config/device-tree/overlays/system
 
-8.5.2 Update FPGA by using sysfs interface
+9.5.2 Update FPGA by using sysfs interface
 Boot up kernel and login, then run below commands in terminal.
 # echo 0 > /sys/class/fpga_manager/fpga0/flags
 # mkdir -p /lib/firmware
@@ -348,62 +478,34 @@ Boot up kernel and login, then run below commands in terminal.
 # cd /lib/firmware
 # echo system.bit.bin > /sys/class/fpga_manager/fpga0/firmware
 
-8.6 Note
+9.6 Note
 ---------
 If customer wants to enable new peripherals that reside in the new FPGA bitstream from linux side,
 overlay solution is able to implement the requirement. Detail description, please refer to below link.
 https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18841847/Solution+ZynqMP+PL+Programming#x-Programming+the+PL+through+Linux
 
-9. System Monitor
-==================
 
-System monitor includes PL monitor and PS monitor.
-Each system monitor measures voltage and temperature to provide information and alarms
-to other parts of the system including the PMU, RPU, and APU processors.
+10 Generate dtb based on HDF/XSA
+================================
+Firstly, set BB_NO_NETWORK as '0' in <path-of-project>/build/conf/local.conf file.
+Then following the steps as below to generate the dtb files based on the HDF/XSA files:
 
-Customer could check the detail system monitor interfaces with below command:
-	# ls -la /sys/bus/iio/devices/iio:device0
+     $ cd path-of-project
+     $ . ./environment-setup-x86_64-wrlinuxsdk-linux
+     $ . ./oe-init-build-env
+     $ cat << _EOF >> conf/local.conf
+PNWHITELIST_xilinx += 'device-tree'
+PNWHITELIST_xilinx += 'python3-dtc'
+PNWHITELIST_xilinx-tools += 'external-hdf'
+HDF_BASE = "file://"
+HDF_PATH = "/< path-to-hdf >/system.xsa"
+HDF_MACHINE = "zcu102-zynqmp"
+_EOF
+     $ bitbake device-tree
 
-10. CANFD
-=========
+Once bitbake successfully, you will find the dtb file "system.dtb" in the directory:
+<path-of-project>/build/tmp-glibc/deploy/images/xilinx-zynqmp/system.dtb
 
-Based on CANFD FPGA LogiCORE IP from Xilinx, there are 2 canfd devices on FPGA side.
-An example is provided to verify can/canfd driver with Xilinx-zcu102 board(REV 1.0) and
-FMC extend board(https://www.xilinx.com/products/boards-and-kits/1-12nths4.html)
-
-10.1 Boot up system with CANFD specific dtb file
-------------------------------------------------
-
-	# fatload mmc 0 0x13000000 zynqmp-zcu102-rev1.0-canfd.dtb
-	or
-	# tftpboot 0x13000000 <tftp server>/zynqmp-zcu102-rev1.0-canfd.dtb
-
-10.2 Verify CANFD
------------------
-
-	Detail verification commands as below:
-
-	# ip link set can1 up type can bitrate 125000 dbitrate 8000000 fd on
-	# ip link set can2 up type can bitrate 125000 dbitrate 8000000 fd on
-	# candump can1 &
-	# cansend can2 5A1#11.22.33.44.55.66.77.88
-	# ip -d -s link show can1
-	# ip -d -s link show can2
-
-If can1 dump data from can2, CANFD feature works fine.
-
-There is a Xilinx Wiki link as below, it is a CANFD development guide.
-It may offer some help when customer develops CANFD feature on their own platform.
-https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18842496/Linux+CAN+driver
-
-If customer wants to implement their own or more canfd devices, please connect with
-Xilinx to get professional technical support about how to design CANFD on FPGA side.
-
-11. Multilib
-============
-
-By default, this BSP is configured as a 64-bit kernel and 64-bit userspace.
-If a full 32-bit filesystem is necessary, use the prefix "lib32-" before
-the expected target image as follows:
-
-	# bitbake lib32-wrlinux-image-std
+NOTE: Please make sure the version of the xsct tools is in accordance with the version
+of HDF/XSA files, and there may be some unpredictable problems if using the HDF/XSA
+files of older versions.
