xilinx-zynqmp: zynqmp-secure-boot: remove argument --kernel from README
Issue: LIN1021-2053

This is to fix the warning when building project for LTS21:

    WARNING: argument --kernel is no longer supported and will be ignored.
         To adjust the LINUX_KERNEL_TYPE, edit the build conf/local.conf file.

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/zynqmp-secure-boot/README
+++ b/zynqmp-secure-boot/README
@@ -275,7 +275,7 @@ Note:
 Detail steps as below:
 	$ mkdir <path_to_project>
 	$ cd <path_to_project>
-	$ <path_to_wrlinux>/wrlinux-x/setup.sh --machine xilinx-zynqmp --kernel standard --distro wrlinux --dl-layers --all-layers --accept-eula=yes
+	$ <path_to_wrlinux>/wrlinux-x/setup.sh --machine xilinx-zynqmp --distro wrlinux --dl-layers --all-layers --accept-eula=yes
 	$ source ./environment-setup-x86_64-wrlinuxsdk-linux
 	$ source ./oe-init-build-env
 	$ bitbake-layers add-layer <path_to_project>/layers/xilinx-zynqmp/zynqmp-secure-boot
